--- a/css/misestilos.css
+++ b/css/misestilos.css
@@ -1,5 +1,5 @@
 body {background-color:#BCF7CD ;background-image: url(../Imagenes/cocina.jpg.jpg;); background-repeat: no-repeat;background-attachment: fixed;}
-.TITULOA{display: flex; justify-content: center;font-size: 59px ;}
+.TITULOA{display: flex; justify-content: center;font-size: 59px ; font-family: inherit;}
 h1 {font-family:verdana; font-size: 43px;}
 p {font-family: monospace;}
 .titulo{font-family: verdana ; font-size: 45px}
@@ -7,31 +7,26 @@ p {font-family: monospace;}
 ul {font-family: monospace;}
 .lista1{font-size: 22px;}
 .lista2{font-size: 19px;}
-ol {background-color: pink;font-family: monospace;}
+ol {background-color:;font-family: monospace;}
 h2 {font-family: monospace;;}
 h3 {background: #F9675E ;font-family: monospace;;}
 nav{ background-color:#E8AAFC ;font-size:20px; display: flex; justify-content: space-around;}
-section{ background-color: pink;
+section{ background-color:;
 width: 48%;
 padding: 20px;
 margin: 1%;
 border: 10px white outset;
 float: left;
 box-sizing: border-box;}
-aside{ background-color: pink;
+aside{ background-color:;
 width: 48%;
 padding: 20px;
 margin: 1%;
 border: 10px outset white;
 float: left;
 box-sizing: border-box;}
-footer{background-color:pink;
-clear: both;
-border:5px black solid;
-height: 120px;
-width: 33%;
-padding: 26px;
-margin-left:33%}
+footer{display: flex; justify-content: space-around;
+clear: both;}
 .contactos{font-family:"verdana"; font-size:35px;}
 .boton{ font-size: 35%;}
 .efecto:hover{ width: 60%;}
