--- a/css/misestilos.css
+++ b/css/misestilos.css
@@ -1,9 +1,9 @@
-body {background-color:#BCF7CD ;background-image: url(../Imagenes/cocina.jpg.jpg;); background-repeat: no-repeat;background-attachment: fixed;}
-.TITULOA{display: flex; justify-content: center;font-size: 59px ; font-family: inherit;}
-h1 {font-family:verdana; font-size: 43px;}
+body {background-color:#FCDFCD; background-repeat: no-repeat;background-attachment: fixed; }
+.TITULOA{background-color: black; display: flex; justify-content: center;font-size: 59px ; color:#9B4C2C;font-family: Cambria;}
+h1 {font-size: 43px;color: #60153A}
 p {font-family: monospace;}
 .titulo{font-family: verdana ; font-size: 45px}
-.parrafo1{font-size: 30px; font-family: Magna;}
+.parrafo1{font-size: 30px; font-family: sans-serif; color:#381907}
 ul {font-family: monospace;}
 .lista1{font-size: 22px;}
 .lista2{font-size: 19px;}
@@ -11,22 +11,24 @@ ol {background-color:;font-family: monospace;}
 h2 {font-family: monospace;;}
 h3 {background: #F9675E ;font-family: monospace;;}
 nav{ background-color:#E8AAFC ;font-size:20px; display: flex; justify-content: space-around;}
-section{ background-color:;
+section{background-color:#FA8C81;
 width: 48%;
 padding: 20px;
 margin: 1%;
 border: 10px white outset;
 float: left;
 box-sizing: border-box;}
-aside{ background-color:;
+aside{ background-color: #FA8C81;
 width: 48%;
 padding: 20px;
 margin: 1%;
 border: 10px outset white;
 float: left;
 box-sizing: border-box;}
-footer{display: flex; justify-content: space-around;
+footer{background-color: black;
+  display: flex; justify-content: space-around;
 clear: both;}
+.parrafo2{text-decoration: inherit;font-size: 30px; font-family:sans-serif;}
 .contactos{font-family:"verdana"; font-size:35px;}
 .boton{ font-size: 35%;}
 .efecto:hover{ width: 60%;}
