--- a/css/misestilos.css
+++ b/css/misestilos.css
@@ -2,33 +2,35 @@ body {background-color:#FCDFCD; background-repeat: no-repeat;background-attachme
 .TITULOA{background-color: black; display: flex; justify-content: center;font-size: 59px ; color:#9B4C2C;font-family: Cambria;}
 h1 {font-size: 43px;color: #60153A}
 p {font-family: monospace;}
-.titulo{font-family: verdana ; font-size: 45px}
+.titulo{font-family: inherit;font-size:65px}
 .parrafo1{font-size: 30px; font-family: sans-serif; color:#381907}
+.d-block{width:80%; height:20% ;}
 ul {font-family: monospace;}
 .lista1{font-size: 22px;}
 .lista2{font-size: 19px;}
 ol {background-color:;font-family: monospace;}
 h2 {font-family: monospace;;}
 h3 {background: #F9675E ;font-family: monospace;;}
-nav{ background-color:#E8AAFC ;font-size:20px; display: flex; justify-content: space-around;}
-section{background-color:#FA8C81;
+nav{ background-color:black ;font-size:35px; display: flex; justify-content: space-around;}
+section{background-color:#F9C1B6;
 width: 48%;
 padding: 20px;
 margin: 1%;
 border: 10px white outset;
 float: left;
 box-sizing: border-box;}
-aside{ background-color: #FA8C81;
+aside{ background-color:#F9C1B6;
 width: 48%;
 padding: 20px;
 margin: 1%;
 border: 10px outset white;
 float: left;
 box-sizing: border-box;}
-footer{background-color: black;
-  display: flex; justify-content: space-around;
+footer{display: flex; justify-content: space-around;
 clear: both;}
 .parrafo2{text-decoration: inherit;font-size: 30px; font-family:sans-serif;}
 .contactos{font-family:"verdana"; font-size:35px;}
 .boton{ font-size: 35%;}
 .efecto:hover{ width: 60%;}
+.cards{display: flex;justify-content: space-around ;}
+.REDES{background-color: #DDD8D8}
