--- a/css/misestilos.css
+++ b/css/misestilos.css
@@ -1,5 +1,6 @@
 body {background-image:url(.././Imagenes/fotocentral1.jpg);background-repeat;background-attachment: fixed; }
-.TITULOprinc{background-image:url(.././Imagenes/fondos7.jpg);  display: flex; justify-content: center;font-size: 100px ; color:red;font-style: italic; font-weight: bold;}
+@font-face {font-family : letras; src: url(indonesia.ttf);}
+.TITULOprinc{background-image:url(.././Imagenes/madera.jpg);  display: flex; justify-content: center;font-size: 100px ; color:#FFC300 ;font-family:letras; font-weight: bold;}
 h1 {font-size: 43px;color: #60153A}
 p {font-family: monospace;}
 .titulo{font-family: inherit;font-size:65px}
@@ -11,7 +12,7 @@ ul {font-family: monospace;}
 ol {background-color:;font-family: monospace;}
 h2 {font-family: monospace;;}
 h3 {background: #F9675E ;font-family: monospace;;}
-nav{ background-image: url(../Imagenes/fondos7.jpg);font-size:47px; display: flex; justify-content: space-around;font-family: monospace; font-weight: bolder;}
+nav{ background-image: url(../Imagenes/colores.webp);font-size:47px; display: flex; justify-content: space-around;font-family: monospace; font-weight: bolder;}
 section{background-color:#F9C1B6;
 width: 48%;
 padding: 20px;
@@ -32,5 +33,8 @@ clear: both;}
 .contactos{font-family:"verdana"; font-size:35px;}
 .boton{ font-size: 35%;}
 .efecto:hover{ width: 60%;}
+.merlot{background-color: #FECFBC;}
+.malbec{background-color: #FECFBC ;}
+.cabernet{background-color: #FECFBC;}
 .cards{display: flex;justify-content: space-around ;}
 .REDES{background-color: #DDD8D8}
